--- a/CustomShirts/CustomShirts.csproj
+++ b/CustomShirts/CustomShirts.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,6 +48,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config.cs" />
+    <Compile Include="CustomHat.cs" />
+    <Compile Include="HatBlueprint.cs" />
     <Compile Include="ShirtPack.cs" />
     <Compile Include="Shirt.cs" />
     <Compile Include="Overrides\OvFarmerRenderer.cs" />
@@ -56,6 +62,7 @@
     </None>
     <None Include="packages.config" />
     <Compile Include="SavedShirt.cs" />
+    <Compile Include="HatSync.cs" />
     <Compile Include="ShirtSync.cs" />
   </ItemGroup>
   <ItemGroup>
