--- a/PyTK/PyTK.csproj
+++ b/PyTK/PyTK.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Types\Mail.cs" />
     <Compile Include="Types\MPMessage.cs" />
     <Compile Include="Types\PyNetMap.cs" />
+    <Compile Include="Types\PyNetField.cs" />
     <Compile Include="Types\PyNetTexture.cs" />
     <Compile Include="Types\PyResponder.cs" />
     <Compile Include="Types\PyMessenger.cs" />
@@ -151,10 +152,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Analyzer Include="..\packages\Pathoschild.Stardew.ModBuildConfig.2.1.0-beta-20180428\analyzers\dotnet\cs\StardewModdingAPI.ModBuildConfig.Analyzer.dll" />
+    <Content Include="Assets\nuget-icon.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\nuget-icon.png" />
+    <Analyzer Include="..\packages\Pathoschild.Stardew.ModBuildConfig.2.1.0-beta-20180428\analyzers\dotnet\cs\StardewModdingAPI.ModBuildConfig.Analyzer.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Pathoschild.Stardew.ModBuildConfig.2.1.0-beta-20180428\build\Pathoschild.Stardew.ModBuildConfig.targets" Condition="Exists('..\packages\Pathoschild.Stardew.ModBuildConfig.2.1.0-beta-20180428\build\Pathoschild.Stardew.ModBuildConfig.targets')" />
