--- a/SplitMoney/SplitMoney.csproj
+++ b/SplitMoney/SplitMoney.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Config.cs" />
     <Compile Include="GoldItem.cs" />
     <Compile Include="SplitMoneyMod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
