--- a/HarpOfYobaRedux/manifest.json
+++ b/HarpOfYobaRedux/manifest.json
@@ -1,11 +1,11 @@
 {
   "Name": "Harp of Yoba Redux",
   "Author": "Platonymous",
-  "Version": "2.4.2",
+  "Version": "2.4.3",
   "Description": "Adds The Harp of Yoba to the game.",
   "UniqueID": "Platonymous.HarpOfYobaRedux",
   "EntryDll": "HarpOfYobaRedux.dll",
-  "MinimumApiVersion": "2.6-beta",
+  "MinimumApiVersion": "2.6",
   "UpdateKeys": [ "Nexus:914" ],
   "Dependencies": [
     {
