--- a/PlanImporter/manifest.json
+++ b/PlanImporter/manifest.json
@@ -1,10 +1,10 @@
 {
   "Name": "PlanImporter",
   "Author": "Platonymous",
-  "Version": "0.8.5",
+  "Version": "0.8.6-beta",
   "Description": "Import plans from stardew.info.",
   "UniqueID": "Platonymous.PlanImporter",
   "EntryDll": "PlanImporter.dll",
-  "MinimumApiVersion": "2.6-beta",
+  "MinimumApiVersion": "2.8-beta",
   "UpdateKeys": [ "Nexus:2071" ]
 }
