--- a/TMXLoader/manifest.json
+++ b/TMXLoader/manifest.json
@@ -1,11 +1,12 @@
 {
   "Name": "TMXLoader",
   "Author": "Platonymous",
-  "Version": "1.4.0",
+  "Version": "1.4.1-beta",
   "Description": "Load TMX Maps into the Game",
   "UniqueID": "Platonymous.TMXLoader",
   "EntryDll": "TMXLoader.dll",
   "UpdateKeys": [ "Nexus:1820" ],
+  "MinimumApiVersion": "2.8-beta",
   "Dependencies": [
     {
       "UniqueID": "Platonymous.Toolkit",
