--- a/PlanImporter/PlanImporter.csproj
+++ b/PlanImporter/PlanImporter.csproj
@@ -52,4 +52,5 @@
     <None Include="manifest.json" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\common.targets" />
 </Project>
