--- a/JunimoFarm/JunimoFarm.csproj
+++ b/JunimoFarm/JunimoFarm.csproj
@@ -50,5 +50,5 @@
     <None Include="manifest.json" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\deploy-mod.targets" />
+  <Import Project="$(SolutionDir)\common.targets" />
 </Project>
