--- a/NoSoilDecayRedux/NoSoilDecayRedux.csproj
+++ b/NoSoilDecayRedux/NoSoilDecayRedux.csproj
@@ -54,5 +54,5 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\deploy-mod.targets" />
+  <Import Project="$(SolutionDir)\common.targets" />
 </Project>
