--- a/PelicanTTS/PelicanTTS.csproj
+++ b/PelicanTTS/PelicanTTS.csproj
@@ -58,5 +58,5 @@
     <None Include="manifest.json" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\deploy-mod.targets" />
+  <Import Project="$(SolutionDir)\common.targets" />
 </Project>
