--- a/SDVGameBoy/SDVGameBoy.csproj
+++ b/SDVGameBoy/SDVGameBoy.csproj
@@ -87,4 +87,5 @@
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\common.targets" />
 </Project>
