--- a/Ultiplayer/Ultiplayer.csproj
+++ b/Ultiplayer/Ultiplayer.csproj
@@ -60,4 +60,5 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\common.targets" />
 </Project>
