--- a/Arcade2048/manifest.json
+++ b/Arcade2048/manifest.json
@@ -1,11 +1,11 @@
 {
   "Name": "Arcade 2048",
   "Author": "Platonymous",
-  "Version": "1.0.4",
+  "Version": "1.0.5",
   "Description": "Play 2048.",
   "UniqueID": "Platonymous.2048",
   "EntryDll": "Arcade2048.dll",
-  "MinimumApiVersion": "2.6-beta",
+  "MinimumApiVersion": "2.8",
   "UpdateKeys": [ "Nexus:2048" ],
   "Dependencies": [
     {
