--- a/CustomFurnitureAnywhere/manifest.json
+++ b/CustomFurnitureAnywhere/manifest.json
@@ -1,15 +1,15 @@
 {
   "Name": "Custom Furniture Anywhere",
   "Author": "Platonymous",
-  "Version": "0.8.1",
+  "Version": "0.8.6",
   "Description": "Makes Custom Furniture work with Furniture Anywhere",
   "UniqueID": "Platonymous.CustomFurnitureAnywhere",
   "EntryDll": "CustomFurnitureAnywhere.dll",
-  "MinimumApiVersion": "2.6-beta",
+  "MinimumApiVersion": "2.8",
   "UpdateKeys": [ "Nexus:1254" ],
   "Dependencies": [
     {
-      "UniqueID": "Platonymous.CustomElementHandler"
+      "UniqueID": "Platonymous.Toolkit"
     },
     {
       "UniqueID": "Platonymous.CustomFurniture"
